[gd_scene load_steps=2 format=3 uid="uid://bshp4mk4ehqe"]

[ext_resource type="Script" path="res://scripts/Shop.gd" id="1_0g8yb"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
script = ExtResource("1_0g8yb")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
color = Color(0.1, 0.05, 0.2, 0.98)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="MainContainer"]
layout_mode = 2
text = "Mystic Shop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GlyphsLabel" type="Label" parent="MainContainer"]
layout_mode = 2
text = "Glyphs: 0"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainContainer"]
layout_mode = 2

[node name="ShopContainer" type="ScrollContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 400)

[node name="ShopContent" type="VBoxContainer" parent="MainContainer/ShopContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonsContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
alignment = 1

[node name="NewRunButton" type="Button" parent="MainContainer/ButtonsContainer"]
layout_mode = 2
text = "Start New Run"
custom_minimum_size = Vector2(140, 40)

[node name="BackButton" type="Button" parent="MainContainer/ButtonsContainer"]
layout_mode = 2
text = "Back to Game"
custom_minimum_size = Vector2(140, 40)